--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
+:root {
+  --brand-color: rgb(16, 30, 161);
+  --box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
+}
 
+button {
+  background-color: var(--brand-color);
+}
+
+h1 {
+  color: var(--brand-color);
+  box-shadow: var(--box-shadow);
+}
+
+.box {
+  border: 3px solid var(--brand-color);
+  box-shadow: var(--box-shadow);
+}
