--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,16 @@
 :root {
-  --brand-color: rgb(16, 30, 161);
-  --box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
-}
-
-@media screen and (max-width: 800px) {
-  :root {
-    --brand-color: rgb(161, 16, 154);
-  }
+  --spacing-sm: 8px;
+  --spacing-md: 16px;
+  --spacing-lg: 32px;
+  --spacing-xl: 64px;
 }
 
 button {
-  background-color: var(--brand-color);
+  padding: var(--spacing-lg);
 }
 
-h1 {
-  color: var(--brand-color);
-  box-shadow: var(--box-shadow);
-}
-
-.box {
-  border: 3px solid var(--brand-color);
-  box-shadow: var(--box-shadow);
+@media screen and (max-width: 800px) {
+  button {
+    padding: var(--spacing-sm);
+  }
 }
